completion of js files

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         </div>
                         <button id="calculate">Calculate</button>
                         <div class="info">
-                            <p class="info__tip"></p>
-                            <p class="info__total"></p>
+                            <p class="info-tip"></p>
+                            <p class="info-total"></p>
                         </div>
                     </div>
             
