A new input was added on my html and my js file code was updated

--- a/index.html
+++ b/index.html
@@ -28,14 +28,8 @@
                             <input type="text" name="amount" id="amount" placeholder="$" class="field__input">
                         </div>
                         <div class="field">
-                            <label for="tip" class="field__label">Tip</label>
-                            <select name="tip" id="tip" class="field__input">
-                                <option value="0" selected>No tip</option>
-                                <option value="5">5% </option>
-                                <option value="10">10% </option>
-                                <option value="15">15% </option>
-                                <option value="20">20% </option>
-                            </select>
+                            <label for="tip" class="field__label">Tip Percentage</label>
+                            <input type="text" name="tip" id="tip-percentage" placeholder="%" class="field__input">
                         </div>
                         <div class="field">
                             <label for="people" class="field__label">People</label>
